rendered/envs/alpha/comentario/deployment-comentario.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: comentario
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: comentario
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/secrets: 83f4ad6102c4e86b5987e55597d9aa82-1
      labels:
        app.kubernetes.io/name: comentario
    spec:
      containers:
        - args:
            - --verbose
          command:
            - /comentario/comentario
          image: registry.gitlab.com/comentario/comentario@sha256:a05b76558687645d8083b2f799aadbf3bc1c355d4b842144a65056a8f5eb7272
          name: comentario
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 48Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
            privileged: false
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - mountPath: /etc/comentario/secrets.yaml
              name: secrets
              readOnly: true
              subPath: secrets.yaml
            - mountPath: /data
              name: data
      securityContext:
        fsGroup: 1000
      volumes:
        - name: secrets
          secret:
            secretName: secrets
        - name: data
          persistentVolumeClaim:
            claimName: data
