rendered/envs/alpha/comentario/service-comentario.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: comentario
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: comentario
